src/objects/Stock_History__c.object
<CustomObject>
    <fields>
        <fullName>AdjustedPreviousClose__c</fullName>
        <label>Adjusted Previous Close</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AskPrice__c</fullName>
        <label>Ask Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AskSize__c</fullName>
        <label>Ask Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BidPrice__c</fullName>
        <label>Bid Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BidSize__c</fullName>
        <label>Bid Size</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastExtendedHoursTradePrice__c</fullName>
        <label>Last Extended Hours Trade Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastTradePrice__c</fullName>
        <label>Last Trade Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousCloseDate__c</fullName>
        <label>Previous Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreviousClose__c</fullName>
        <label>Previous Close</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <label>Stock</label>
        <referenceTo>Stock__c</referenceTo>
        <relationshipLabel>Stock Historys</relationshipLabel>
        <relationshipName>Stock_Historys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Stock History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SH-{000000000}</displayFormat>
        <label>Stock History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Historys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>